--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             <div class="service-panel-subtitle">Stand-On or Push · Difficulty-based pricing · Min 0.43 B.Hrs</div>
                         </div>
                     </div>
-                    <div class="service-panel-body" style="display:block;">
+                   <div class="service-panel-body">
                         <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
                             <div>
                                 <label class="block text-gray-700 font-semibold mb-2 text-sm">Service Type</label>
