--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 </div>
 
                 <!-- MOWING PANEL -->
-                <div class="service-panel active" id="mowingPanel">
+                <div class="service-panel" id="mowingPanel">
                     <div class="service-panel-header">
                         <div>
                             <div class="service-panel-title">🌿 Lawn Mowing Service</div>
