--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@
                 </div>
 
                 <!-- MOWING PANEL -->
-<div class="service-panel active" id="mowingPanel">              
-    <div class="service-panel-header">
+                <div class="service-panel active" id="mowingPanel">
+                    <div class="service-panel-header">
                         <div>
                             <div class="service-panel-title">🌿 Lawn Mowing Service</div>
                             <div class="service-panel-subtitle">Stand-On or Push · Difficulty-based pricing · Min 0.43 B.Hrs</div>
                         </div>
                     </div>
-                   <div class="service-panel-body">
+                    <div class="service-panel-body" id="mowingPanelBody">
                         <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
                             <div>
                                 <label class="block text-gray-700 font-semibold mb-2 text-sm">Service Type</label>
@@ -571,7 +571,10 @@
     }
 
     function toggleMowingSection() {
-        document.getElementById('mowingPanel').classList.toggle('active', document.getElementById('includeMowing').checked);
+        const checked = document.getElementById('includeMowing').checked;
+        const panel = document.getElementById('mowingPanel');
+        panel.style.display = checked ? 'block' : 'none';
+        panel.classList.toggle('active', checked);
     }
 
     function toggleBedPricingMethod() {
@@ -1079,8 +1082,8 @@
 
     window.addEventListener('load', () => {
         setTimeout(() => { if (!autocomplete && typeof google !== 'undefined' && google.maps && google.maps.places) setupAutocomplete(); }, 1000);
+        toggleMowingSection(); // sync panel to initial checkbox state
     });
-    document.addEventListener('DOMContentLoaded', () => { toggleMowingSection(); });
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHvZq7kiDX_thzi8F9XTg_bySLcxpd_ME&libraries=places,drawing,geometry&callback=initMap" async defer></script>
 </body>
